--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,9 @@
 
     <string name="title_activity_maps">Map</string>
 
-
+    <string name="default_info_title">Default Location</string>
+    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
+    <string name="option_get_place" type="id">Get place</string>
+    <string name="pick_place">Choose a place</string>
+    
 </resources>
