--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="default_info_snippet">No places found, because location permission is disabled.</string>
     <string name="option_get_place" type="id">Get place</string>
     <string name="pick_place">Choose a place</string>
-    
+    <string name="pick_this_location">Pick This Location</string>
+
 </resources>
