--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,15 +10,18 @@
     <string name="login_mobile_number_hint">Mobile Number</string>
 
     <string name="next">next</string>
-    <string-array name="condition_array">
-        <item>Excellent</item>
-        <item>Good</item>
-        <item>Needing Repair</item>
-    </string-array>
+
 
     <string-array name="gender">
         <item>Male</item>
         <item>Female</item>
+    </string-array>
+
+    <string-array name="condition">
+        <item>A</item>
+        <item>B</item>
+        <item>C</item>
+        <item>D</item>
     </string-array>
 
     <string name="title_activity_maps">Map</string>
